--- a/index.html
+++ b/index.html
@@ -235,192 +235,125 @@
                     enregistrée</span>
             </div>
         </section>
+<!-- ONGLET 2: GUIDE -->
+<section id="guide" class="tab-content">
+    <h1>🚀 Guide DictaMed</h1>
+    <p style="text-align: center; font-size: 1.15em; color: var(--gray-medium); margin-bottom: 35px;">
+        Transformez votre voix en données SPSS simplement et rapidement
+    </p>
 
-        <!-- ONGLET 2: GUIDE -->
-        <section id="guide" class="tab-content">
-            <h1>Guide d'utilisation DictaMed</h1>
-
-            <!-- Problématique -->
-            <div class="card">
-                <h2>💭 La Problématique</h2>
-                <p>La saisie manuelle de données dans SPSS représente un défi majeur pour les chercheurs et
-                    professionnels de santé :</p>
-                <ul>
-                    <li><strong>⏱️ Temps considérable perdu</strong> : Des heures passées à saisir manuellement chaque
-                        variable pour des dizaines ou centaines de patients</li>
-                    <li><strong>🧠 Concentration intense requise</strong> : Risque d'erreurs de saisie, de fatigue
-                        mentale et de démotivation</li>
-                    <li><strong>🔄 Tâche fastidieuse et répétitive</strong> : Processus chronophage qui détourne du cœur
-                        de métier (analyse et recherche)</li>
-                    <li><strong>❌ Erreurs fréquentes</strong> : Fautes de frappe, inversions de valeurs, oublis qui
-                        compromettent la qualité des données</li>
-                </ul>
-                <div class="info-box" style="margin-top: 20px;">
-                    <strong>📊 Le constat :</strong> Les études montrent qu'un chercheur peut passer jusqu'à 40% de son
-                    temps sur la saisie manuelle de données, avec un taux d'erreur moyen de 3-5%.
-                    <div style="margin-top: 15px; padding-top: 15px; border-top: 1px solid rgba(37, 99, 235, 0.2);">
-                        <strong>📚 Études scientifiques :</strong>
-                        <ul style="margin-top: 10px; margin-left: 20px; line-height: 1.8;">
-                            <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC2656002/" target="_blank"
-                                    rel="noopener noreferrer">PMC - Impact of data entry errors on research outcomes</a>
-                            </li>
-                            <li><a href="https://www.researchgate.net/publication/220495402_Preventing_human_error_The_impact_of_data_entry_methods_on_data_accuracy_and_statistical_results"
-                                    target="_blank" rel="noopener noreferrer">ResearchGate - Preventing human error in
-                                    data entry</a></li>
-                            <li><a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6239225/" target="_blank"
-                                    rel="noopener noreferrer">PMC - Data accuracy and statistical analysis</a></li>
-                        </ul>
-                    </div>
-                </div>
+    <!-- Comment ça fonctionne -->
+    <div class="card solution-card">
+        <h2>✨ Comment ça fonctionne ?</h2>
+        <div class="workflow">
+            <div class="workflow-step">
+                <h4>🎤 Dictez</h4>
+                <p>Parlez naturellement</p>
             </div>
-
-            <!-- Solution -->
-            <div class="card solution-card">
-                <h2>✨ La Solution DictaMed</h2>
-                <p style="font-size: 1.1em; margin-bottom: 25px;">Transformez votre voix en données structurées grâce à
-                    l'intelligence artificielle :</p>
-                <div class="workflow">
-                    <div class="workflow-step">
-                        <h4>🎤 Dictée vocale</h4>
-                        <p>Parlez naturellement vos observations</p>
-                    </div>
-                    <div class="workflow-arrow">→</div>
-                    <div class="workflow-step">
-                        <h4>🤖 IA transcrit</h4>
-                        <p>Traitement automatique par l'IA</p>
-                    </div>
-                    <div class="workflow-arrow">→</div>
-                    <div class="workflow-step">
-                        <h4>📊 Google Sheets</h4>
-                        <p>Données structurées en temps réel</p>
-                    </div>
-                    <div class="workflow-arrow">→</div>
-                    <div class="workflow-step">
-                        <h4>📈 SPSS</h4>
-                        <p>Prêt pour l'analyse statistique</p>
-                    </div>
-                </div>
-                <div class="info-box" style="margin-top: 25px;">
-                    <strong>🚀 Résultat :</strong> Économisez jusqu'à 70% de votre temps de saisie avec une précision
-                    supérieure à 95%
-                </div>
-                <div class="cta-buttons">
-                    <button class="btn btn-primary" onclick="switchTab('mode-test')">🎯 Essayer le Mode Test</button>
-                </div>
+            <div class="workflow-arrow">→</div>
+            <div class="workflow-step">
+                <h4>🤖 IA transcrit</h4>
+                <p>Traitement automatique</p>
             </div>
-
-            <!-- Conseils pratiques -->
-            <div class="card">
-                <h2>💡 Conseils pour une dictée optimale</h2>
-                <div class="steps-grid">
-                    <div class="step-card">
-                        <h3>🎤 Microphone</h3>
-                        <p>Utilisez un microphone de qualité ou les écouteurs de votre smartphone pour une meilleure
-                            reconnaissance</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>🔇 Environnement</h3>
-                        <p>Privilégiez un endroit calme sans bruit de fond (fermez portes et fenêtres)</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>🗣️ Élocution</h3>
-                        <p>Parlez clairement et lentement, en articulant bien chaque mot et chaque chiffre</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>⏸️ Pauses</h3>
-                        <p>Marquez une courte pause entre chaque valeur pour faciliter la transcription</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>📝 Structure</h3>
-                        <p>Suivez l'ordre des variables de votre plan de travail pour éviter les confusions</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>✅ Vérification</h3>
-                        <p>Utilisez la fonction "Réécouter" pour valider vos enregistrements avant envoi</p>
-                    </div>
-                </div>
+            <div class="workflow-arrow">→</div>
+            <div class="workflow-step">
+                <h4>📊 Sheets</h4>
+                <p>Données structurées</p>
             </div>
-
-            <!-- Processus en 7 étapes -->
-            <div class="card">
-                <h2>📋 Processus en 7 étapes</h2>
-                <p style="margin-bottom: 25px;">De la commande à l'analyse : voici comment fonctionne DictaMed</p>
-                <div class="steps-grid">
-                    <div class="step-card">
-                        <div class="step-number">1</div>
-                        <h3>Fixez vos variables</h3>
-                        <p>Définissez précisément les variables que vous souhaitez collecter</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">2</div>
-                        <h3>Envoyez votre fichier SPSS</h3>
-                        <p>Partagez votre template SPSS avec la structure de vos variables</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">3</div>
-                        <h3>Recevez vos identifiants</h3>
-                        <p>Obtenez vos identifiants personnels sécurisés (sous 48h)</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">4</div>
-                        <h3>Plan de travail organisé</h3>
-                        <p>Structure optimisée en 3-4 parties thématiques</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">5</div>
-                        <h3>Google Sheet personnalisé</h3>
-                        <p>Accès direct à votre feuille de données en temps réel</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">6</div>
-                        <h3>Dictez vos données</h3>
-                        <p>Enregistrez vocalement vos observations patient par patient</p>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">7</div>
-                        <h3>Fichier SPSS complet</h3>
-                        <p>Recevez votre fichier prêt pour l'analyse statistique</p>
-                    </div>
-                </div>
+            <div class="workflow-arrow">→</div>
+            <div class="workflow-step">
+                <h4>📈 SPSS</h4>
+                <p>Prêt à analyser</p>
             </div>
+        </div>
+        <div class="info-box" style="margin-top: 25px;">
+            <strong>🚀 Résultat :</strong> Économisez 70% de temps avec une précision >95%
+        </div>
+    </div>
 
-            <!-- Avantages -->
-            <div class="card solution-card">
-                <h2>🎯 Pourquoi choisir DictaMed ?</h2>
-                <div class="steps-grid">
-                    <div class="step-card">
-                        <h3>⚡ Gain de temps</h3>
-                        <p>Divisez par 3 votre temps de saisie de données</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>🎯 Précision</h3>
-                        <p>Taux de reconnaissance >95% avec IA médicale spécialisée</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>🔒 Sécurité</h3>
-                        <p>Conformité RGPD et chiffrement bout-en-bout</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>📱 Flexibilité</h3>
-                        <p>Compatible ordinateur, tablette et smartphone</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>💰 Économies</h3>
-                        <p>Réduisez les coûts de saisie manuelle</p>
-                    </div>
-                    <div class="step-card">
-                        <h3>🎓 Support</h3>
-                        <p>Assistance personnalisée et formation incluse</p>
-                    </div>
-                </div>
+    <!-- Démarrage rapide -->
+    <div class="card">
+        <h2>🎯 Comment démarrer ?</h2>
+        <div class="steps-grid">
+            <div class="step-card">
+                <div class="step-number">1</div>
+                <h3>Définissez vos variables</h3>
+                <p>Envoyez-nous votre fichier SPSS</p>
             </div>
+            <div class="step-card">
+                <div class="step-number">2</div>
+                <h3>Recevez vos accès</h3>
+                <p>Identifiants personnalisés sous 48h</p>
+            </div>
+            <div class="step-card">
+                <div class="step-number">3</div>
+                <h3>Dictez vos données</h3>
+                <p>Enregistrez patient par patient</p>
+            </div>
+            <div class="step-card">
+                <div class="step-number">4</div>
+                <h3>Récupérez votre SPSS</h3>
+                <p>Fichier prêt pour l'analyse</p>
+            </div>
+        </div>
+    </div>
 
-            <!-- CTA final -->
-            <div class="cta-buttons">
-                <button class="btn btn-primary" onclick="switchTab('mode-test')">🎯 Essayer le Mode Test</button>
-                <button class="btn btn-secondary" onclick="switchTab('contact')">📧 Nous Contacter</button>
+    <!-- Conseils essentiels -->
+    <div class="card">
+        <h2>💡 Conseils essentiels</h2>
+        <div class="steps-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
+            <div class="step-card">
+                <h3>🎤 Audio de qualité</h3>
+                <p>Microphone ou écouteurs + environnement calme</p>
             </div>
-        </section>
+            <div class="step-card">
+                <h3>🗣️ Parlez clairement</h3>
+                <p>Articulation soignée + pauses entre les valeurs</p>
+            </div>
+            <div class="step-card">
+                <h3>✅ Vérifiez avant d'envoyer</h3>
+                <p>Utilisez "Réécouter" pour valider</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Avantages clés -->
+    <div class="card solution-card">
+        <h2>🎯 Pourquoi DictaMed ?</h2>
+        <div class="steps-grid">
+            <div class="step-card">
+                <h3>⚡ Gain de temps</h3>
+                <p>70% de temps économisé</p>
+            </div>
+            <div class="step-card">
+                <h3>🎯 Précision</h3>
+                <p>IA médicale >95%</p>
+            </div>
+            <div class="step-card">
+                <h3>🔒 Sécurité</h3>
+                <p>Conformité RGPD</p>
+            </div>
+            <div class="step-card">
+                <h3>📱 Multi-device</h3>
+                <p>PC, tablette, mobile</p>
+            </div>
+            <div class="step-card">
+                <h3>💰 Économique</h3>
+                <p>Tarif personnalisé</p>
+            </div>
+            <div class="step-card">
+                <h3>🤝 Support inclus</h3>
+                <p>Formation + assistance</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- CTA final -->
+    <div class="cta-buttons">
+        <button class="btn btn-primary" onclick="switchTab('mode-test')">🎯 Essayer gratuitement</button>
+        <button class="btn btn-secondary" onclick="switchTab('contact')">📧 Nous contacter</button>
+    </div>
+</section>
 
         <!-- ONGLET 3: CONTACT -->
         <section id="contact" class="tab-content">
