--- a/index.html
+++ b/index.html
@@ -235,210 +235,125 @@
                     enregistrée</span>
             </div>
         </section>
-<!-- ONGLET 2: GUIDE -->
-<section id="guide" class="tab-content">
-    <h1>🚀 Guide DictaMed</h1>
-    <p style="text-align: center; font-size: 1.15em; color: var(--gray-medium); margin-bottom: 35px;">
-        Transformez votre voix en données SPSS simplement et rapidement
-    </p>
+        <!-- ONGLET 2: GUIDE -->
+        <section id="guide" class="tab-content">
+            <h1>🚀 Guide DictaMed</h1>
+            <p style="text-align: center; font-size: 1.15em; color: var(--gray-medium); margin-bottom: 35px;">
+                Transformez votre voix en données SPSS simplement et rapidement
+            </p>
 
-    <!-- Comment ça fonctionne -->
-    <div class="card solution-card">
-        <h2>✨ Comment ça fonctionne ?</h2>
-        <div class="workflow">
-            <div class="workflow-step">
-                <h4>🎤 Dictez</h4>
-                <p>Parlez naturellement</p>
+            <!-- Comment ça fonctionne -->
+            <div class="card solution-card">
+                <h2>✨ Comment ça fonctionne ?</h2>
+                <div class="workflow">
+                    <div class="workflow-step">
+                        <h4>🎤 Dictez</h4>
+                        <p>Parlez naturellement</p>
+                    </div>
+                    <div class="workflow-arrow">→</div>
+                    <div class="workflow-step">
+                        <h4>🤖 IA transcrit</h4>
+                        <p>Traitement automatique</p>
+                    </div>
+                    <div class="workflow-arrow">→</div>
+                    <div class="workflow-step">
+                        <h4>📊 Sheets</h4>
+                        <p>Données structurées</p>
+                    </div>
+                    <div class="workflow-arrow">→</div>
+                    <div class="workflow-step">
+                        <h4>📈 SPSS</h4>
+                        <p>Prêt à analyser</p>
+                    </div>
+                </div>
+                <div class="info-box" style="margin-top: 25px;">
+                    <strong>🚀 Résultat :</strong> Économisez 70% de temps avec une précision >95%
+                </div>
             </div>
-            <div class="workflow-arrow">→</div>
-            <div class="workflow-step">
-                <h4>🤖 IA transcrit</h4>
-                <p>Traitement automatique</p>
-            </div>
-            <div class="workflow-arrow">→</div>
-            <div class="workflow-step">
-                <h4>📊 Sheets</h4>
-                <p>Données structurées</p>
-            </div>
-            <div class="workflow-arrow">→</div>
-            <div class="workflow-step">
-                <h4>📈 SPSS</h4>
-                <p>Prêt à analyser</p>
-            </div>
-        </div>
-        <div class="info-box" style="margin-top: 25px;">
-            <strong>🚀 Résultat :</strong> Économisez 70% de temps avec une précision >95%
-        </div>
-    </div>
 
-    <!-- Démarrage rapide -->
-    <div class="card">
-        <h2>🎯 Comment démarrer ?</h2>
-        <div class="steps-grid">
-            <div class="step-card">
-                <div class="step-number">1</div>
-                <h3>Définissez vos variables</h3>
-                <p>Envoyez-nous votre fichier SPSS</p>
-            </div>
-            <div class="step-card">
-                <div class="step-number">2</div>
-                <h3>Recevez vos accès</h3>
-                <p>Identifiants personnalisés sous 48h</p>
-            </div>
-            <div class="step-card">
-                <div class="step-number">3</div>
-                <h3>Dictez vos données</h3>
-                <p>Enregistrez patient par patient</p>
-            </div>
-            <div class="step-card">
-                <div class="step-number">4</div>
-                <h3>Récupérez votre SPSS</h3>
-                <p>Fichier prêt pour l'analyse</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Conseils essentiels -->
-    <div class="card">
-        <h2>💡 Conseils essentiels</h2>
-        <div class="steps-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
-            <div class="step-card">
-                <h3>🎤 Audio de qualité</h3>
-                <p>Microphone ou écouteurs + environnement calme</p>
-            </div>
-            <div class="step-card">
-                <h3>🗣️ Parlez clairement</h3>
-                <p>Articulation soignée + pauses entre les valeurs</p>
-            </div>
-            <div class="step-card">
-                <h3>✅ Vérifiez avant d'envoyer</h3>
-                <p>Utilisez "Réécouter" pour valider</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Avantages clés -->
-    <div class="card solution-card">
-        <h2>🎯 Pourquoi DictaMed ?</h2>
-        <div class="steps-grid">
-            <div class="step-card">
-                <h3>⚡ Gain de temps</h3>
-                <p>70% de temps économisé</p>
-            </div>
-            <div class="step-card">
-                <h3>🎯 Précision</h3>
-                <p>IA médicale >95%</p>
-            </div>
-            <div class="step-card">
-                <h3>🔒 Sécurité</h3>
-                <p>Conformité RGPD</p>
-            </div>
-            <div class="step-card">
-                <h3>📱 Multi-device</h3>
-                <p>PC, tablette, mobile</p>
-            </div>
-            <div class="step-card">
-                <h3>💰 Économique</h3>
-                <p>Tarif personnalisé</p>
-            </div>
-            <div class="step-card">
-                <h3>🤝 Support inclus</h3>
-                <p>Formation + assistance</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- CTA final -->
-    <div class="cta-buttons">
-        <button class="btn btn-primary" onclick="switchTab('mode-test')">🎯 Essayer gratuitement</button>
-        <button class="btn btn-secondary" onclick="switchTab('contact')">📧 Nous contacter</button>
-    </div>
-</section>
-
-        <!-- ONGLET 3: CONTACT -->
-        <section id="contact" class="tab-content">
-            <h1>Contact</h1>
-
+            <!-- Démarrage rapide -->
             <div class="card">
-                <h2>Commander DictaMed</h2>
-                <p>📧 <strong>Email :</strong> <a
-                        href="mailto:dictamed.contact@gmail.com">dictamed.contact@gmail.com</a></p>
-                <p>📘 <strong>Facebook :</strong> <a href="https://www.facebook.com/DictaMed.SPSS" target="_blank"
-                        rel="noopener noreferrer">DictaMed.SPSS</a></p>
-                <p class="info-box">💰 Tarification personnalisée selon le nombre de patients et de variables à
-                    collecter.</p>
+                <h2>🎯 Comment démarrer ?</h2>
+                <div class="steps-grid">
+                    <div class="step-card">
+                        <div class="step-number">1</div>
+                        <h3>Définissez vos variables</h3>
+                        <p>Envoyez-nous votre fichier SPSS</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">2</div>
+                        <h3>Recevez vos accès</h3>
+                        <p>Identifiants personnalisés sous 48h</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">3</div>
+                        <h3>Dictez vos données</h3>
+                        <p>Enregistrez patient par patient</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">4</div>
+                        <h3>Récupérez votre SPSS</h3>
+                        <p>Fichier prêt pour l'analyse</p>
+                    </div>
+                </div>
             </div>
 
+            <!-- Conseils essentiels -->
             <div class="card">
-                <h2>Informations à fournir</h2>
-                <p>Pour établir un devis personnalisé, veuillez nous communiquer :</p>
-                <ul>
-                    <li>👤 Nom et prénom</li>
-                    <li>📞 Numéro de téléphone</li>
-                    <li>🏥 Établissement</li>
-                    <li>👥 Nombre de patients à inclure</li>
-                    <li>📊 Fichier SPSS avec vos variables définies</li>
-                    <li>📅 Date de démarrage souhaitée</li>
-                </ul>
-                <p class="info-box">⏱️ <strong>Délai de réponse :</strong> 48 heures ouvrées</p>
+                <h2>💡 Conseils essentiels</h2>
+                <div class="steps-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
+                    <div class="step-card">
+                        <h3>🎤 Audio de qualité</h3>
+                        <p>Microphone ou écouteurs + environnement calme</p>
+                    </div>
+                    <div class="step-card">
+                        <h3>🗣️ Parlez clairement</h3>
+                        <p>Articulation soignée + pauses entre les valeurs</p>
+                    </div>
+                    <div class="step-card">
+                        <h3>✅ Vérifiez avant d'envoyer</h3>
+                        <p>Utilisez "Réécouter" pour valider</p>
+                    </div>
+                </div>
             </div>
-        </section>
 
-        <!-- ONGLET 4: FAQ -->
-        <section id="faq" class="tab-content">
-            <h1>Questions Fréquentes</h1>
-
-            <div class="faq-list">
-                <div class="faq-item">
-                    <h3>1. Qu'est-ce que DictaMed ?</h3>
-                    <p>DictaMed est une solution innovante de dictée médicale intelligente qui permet aux professionnels
-                        de santé de transformer leurs enregistrements vocaux en données structurées pour faciliter la
-                        collecte de données médicales et la création de fichiers SPSS.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>2. Comment fonctionne le Mode Test ?</h3>
-                    <p>Le Mode Test est une démonstration gratuite accessible sans authentification. Il vous permet
-                        d'enregistrer des données fictives et de voir en temps réel comment elles sont transcrites dans
-                        un Google Sheet public.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>3. Mes données sont-elles sécurisées ?</h3>
-                    <p>Absolument. DictaMed est conforme au RGPD et utilise un chiffrement de bout en bout pour toutes
-                        les données en Mode Normal. Les enregistrements sont stockés de manière sécurisée et ne sont
-                        accessibles qu'aux personnes autorisées.</p>
-                </div>
-
-                <div class="faq-item">
-                    <h3>4. Quels navigateurs sont compatibles ?</h3>
-                    <p>DictaMed fonctionne sur tous les navigateurs modernes : Google Chrome (recommandé), Mozilla
-                        Firefox, Microsoft Edge et Safari. L'application est également optimisée pour mobile et
-                        tablette.</p>
+            <!-- Avantages clés -->
+            <div class="card solution-card">
+                <h2>🎯 Pourquoi DictaMed ?</h2>
+                <div class="steps-grid">
+                    <div class="step-card">
+                        <h3>⚡ Gain de temps</h3>
+                        <p>70% de temps économisé</p>
+                    </div>
+                    tablette.</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>5. Puis-je mettre en pause un enregistrement ?</h3>
-                    <p>Oui, chaque section d'enregistrement dispose d'une fonction pause qui vous permet d'interrompre
+                    <p>Oui, chaque section d'enregistrement dispose d'une fonction pause qui vous permet
+                        d'interrompre
                         temporairement votre dictée et de la reprendre ensuite.</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>6. Comment obtenir un devis ?</h3>
                     <p>Contactez-nous par email à <a
-                            href="mailto:dictamed.contact@gmail.com">dictamed.contact@gmail.com</a> en fournissant les
+                            href="mailto:dictamed.contact@gmail.com">dictamed.contact@gmail.com</a> en fournissant
+                        les
                         informations listées dans l'onglet Contact. Nous vous répondrons sous 48 heures ouvrées.</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>7. Quelle est la précision de la transcription ?</h3>
-                    <p>Notre système d'intelligence artificielle atteint une précision supérieure à 95% pour les données
+                    <p>Notre système d'intelligence artificielle atteint une précision supérieure à 95% pour les
+                        données
                         médicales structurées, particulièrement lorsque les consignes de dictée sont respectées.</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>8. Puis-je personnaliser les paramètres ?</h3>
-                    <p>Oui, chaque client en Mode Normal reçoit une configuration personnalisée adaptée à ses variables
+                    <p>Oui, chaque client en Mode Normal reçoit une configuration personnalisée adaptée à ses
+                        variables
                         SPSS spécifiques.</p>
                 </div>
 
@@ -450,7 +365,8 @@
 
                 <div class="faq-item">
                     <h3>10. Que se passe-t-il après la transcription ?</h3>
-                    <p>Les données transcrites sont automatiquement ajoutées à votre Google Sheet personnalisé où vous
+                    <p>Les données transcrites sont automatiquement ajoutées à votre Google Sheet personnalisé où
+                        vous
                         pouvez les vérifier et les corriger si nécessaire.</p>
                 </div>
             </div>
