--- a/index.html
+++ b/index.html
@@ -230,7 +230,89 @@
                 </a>
             </div>
             </div>
+            <!-- ONGLET 2: GUIDE -->
+            <section id="guide" class="tab-content">
+                <div class="card">
+                    <h2>📖 Guide d'utilisation</h2>
+                    <div class="workflow">
+                        <div class="steps-grid">
+                            <div class="step-card">
+                                <div class="step-number">1</div>
+                                <h3>Authentification</h3>
+                                <p>Remplissez vos identifiants pour sécuriser vos données.</p>
+                            </div>
+                            <div class="step-card">
+                                <div class="step-number">2</div>
+                                <h3>Information Patient</h3>
+                                <p>Saisissez le numéro de dossier et le nom du patient.</p>
+                            </div>
+                            <div class="step-card">
+                                <div class="step-number">3</div>
+                                <h3>Enregistrement</h3>
+                                <p>Dictez les informations pour chaque section.</p>
+                            </div>
+                            <div class="step-card">
+                                <div class="step-number">4</div>
+                                <h3>Envoi</h3>
+                                <p>Envoyez les données sécurisées vers le serveur.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
 
+            <!-- ONGLET 3: CONTACT -->
+            <section id="contact" class="tab-content">
+                <div class="card">
+                    <h2>📧 Contactez-nous</h2>
+                    <div class="contact-grid">
+                        <div class="contact-info-card">
+                            <div class="contact-item">
+                                <span class="contact-icon">📧</span>
+                                <div>
+                                    <h3>Email</h3>
+                                    <a href="mailto:dictamed.contact@gmail.com">dictamed.contact@gmail.com</a>
+                                </div>
+                            </div>
+                            <div class="contact-item">
+                                <span class="contact-icon">📞</span>
+                                <div>
+                                    <h3>Téléphone</h3>
+                                    <a href="tel:+33123456789">+33 1 23 45 67 89</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="quote-card">
+                            <h3>Demander un devis</h3>
+                            <p>Contactez notre équipe pour une offre personnalisée.</p>
+                            <ul class="checklist">
+                                <li>✓ Installation sur site</li>
+                                <li>✓ Formation des équipes</li>
+                                <li>✓ Support dédié</li>
+                            </ul>
+                            <a href="mailto:sales@dictamed.com" class="btn btn-primary btn-large">Contacter les
+                                ventes</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- ONGLET 4: FAQ -->
+            <section id="faq" class="tab-content">
+                <div class="card">
+                    <h2>❓ Foire Aux Questions</h2>
+                    <div class="faq-list">
+                        <div class="faq-item">
+                            <h3>Comment fonctionne la dictée ?</h3>
+                            <p>Cliquez sur "Enregistrer", parlez distinctement, puis cliquez sur "Arrêter".</p>
+                        </div>
+                        <div class="faq-item">
+                            <h3>Mes données sont-elles sécurisées ?</h3>
+                            <p>Oui, toutes les données sont chiffrées et transmises par protocoles sécurisés.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Consignes -->
             <div class="card instructions-card">
                 <h2>📝 Consignes d'utilisation</h2>
