--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
         <!-- ONGLET 1: MODE NORMAL -->
         <section id="mode-normal" class="tab-content active">
 
-            <!-- Authentification -->
+            <!-- Authentification Firebase -->
             <div class="card auth-card">
                 <h2>🔐 Authentification</h2>
-                <div class="form-group">
-                    <label for="username">🔐 Identifiant</label>
-                    <input type="text" id="username" placeholder="Votre identifiant" autocomplete="username">
-                </div>
-                <div class="form-group">
-                    <label for="accessCode">🔑 Code d'accès</label>
-                    <input type="password" id="accessCode" placeholder="Votre code d'accès"
-                        autocomplete="current-password">
-                </div>
-                <div class="form-group" style="margin-top: 15px;">
-                    <label style="display: flex; align-items: center; gap: 8px; cursor: pointer;">
-                        <input type="checkbox" id="rememberAuth" style="width: auto; cursor: pointer;">
-                        <span>💾 Enregistrer mes informations d'authentification</span>
-                    </label>
+                <div id="authContent">
+                    <p class="auth-description">
+                        Connectez-vous pour accéder à DictaMed. Utilisez votre compte existant ou créez-en un nouveau.
+                    </p>
+                    <div class="auth-buttons">
+                        <button class="btn btn-primary" id="loginBtn">🔐 Se connecter</button>
+                        <button class="btn btn-secondary" id="registerBtn">✨ Créer un compte</button>
+                    </div>
+                    <div class="auth-migration">
+                        <p class="migration-text">
+                            <strong>Ancien utilisateur ?</strong> 
+                            <a href="#" id="showMigrationBtn">Migrer votre compte</a>
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -751,6 +751,11 @@
         </div>
     </footer>
 
+    <!-- Firebase SDKs -->
+    <script type="module" src="firebase-config.js"></script>
+    <script type="module" src="firebase-auth-service.js"></script>
+    <script type="module" src="auth-components.js"></script>
+    
     <script src="script.js"></script>
 </body>
 
